[gd_scene load_steps=4 format=3 uid="uid://dcjjbfvt1m8s2"]

[ext_resource type="Script" path="res://scoreboard.gd" id="1_8w4x6"]
[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="2_cgo2e"]

[sub_resource type="LabelSettings" id="LabelSettings_fqy64"]
font_size = 38

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8w4x6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 239.0
offset_bottom = 70.0
text = "modify points(add/sub):"
label_settings = SubResource("LabelSettings_fqy64")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 169.0
offset_right = 266.0
offset_bottom = 239.0
text = "0"
label_settings = SubResource("LabelSettings_fqy64")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 18.0
offset_right = 757.0
offset_bottom = 67.0

[node name="btnUpdate" type="Button" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 487.0
offset_right = 242.0
offset_bottom = 562.0
theme = ExtResource("2_cgo2e")
text = "update"

[node name="btnReset" type="Button" parent="."]
layout_mode = 0
offset_left = 684.0
offset_top = 462.0
offset_right = 873.0
offset_bottom = 537.0
theme = ExtResource("2_cgo2e")
text = "reset"

[connection signal="pressed" from="btnUpdate" to="." method="_on_btn_update_pressed"]
[connection signal="pressed" from="btnReset" to="." method="_on_btn_reset_pressed"]
